--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,8 +14,7 @@
         android:layout_height="match_parent"
         android:id="@+id/container"
         app:navGraph="@navigation/settings_navigation_graph"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        />
+        android:name="androidx.navigation.fragment.NavHostFragment" />
 
 
 </FrameLayout>
