--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="check_yellow">#E5A733</color>
     <color name="check_green">#33E5A7</color>
     <color name="active_color">#e53371</color>
+    <color name="active_color_25">#40E53371</color>
     <color name="white_stroke">#EDF2F4</color>
     <color name="surface_white">#D3D7DF</color>
     <color name="grayish_white">#A3A3A3</color>
