--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -3,6 +3,17 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/myFontStyle.Headline"
+        android:text="@string/select_settings"
+        android:textSize="@dimen/text_huge"
+        android:textColor="@color/white_stroke"
+        android:layout_marginStart="@dimen/dp_12"
+        android:layout_marginEnd="@dimen/dp_12"
+        android:paddingTop="@dimen/dp_24"
+        android:paddingBottom="@dimen/dp_24"/>
 </LinearLayout>
