Add navigation support to settings fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -250,6 +250,7 @@
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:id="@+id/drawerNavigation"
         app:headerLayout="@layout/header_navigation_drawer"
         app:menu="@menu/drawer_menu"
         style="@style/myNavDrawer"
