--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,5 @@
     <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
 </resources>
