add RV items for channel permissions

--- a/app/src/main/res/layout/recycler_view_selected_channel_chip.xml
+++ b/app/src/main/res/layout/recycler_view_selected_channel_chip.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/dp_4"
     android:elevation="0dp"
     app:cardBackgroundColor="@color/channel_chip_background"
     app:cardCornerRadius="@dimen/dp_4"
-    android:layout_marginBottom="@dimen/dp_4"
     app:strokeWidth="0dp">
 
     <LinearLayout
@@ -15,14 +15,14 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:orientation="horizontal"
-        android:weightSum="8"
-        android:padding="@dimen/dp_8">
+        android:padding="@dimen/dp_8"
+        android:weightSum="8">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="4">
+            android:layout_weight="4"
+            android:orientation="horizontal">
 
 
             <ImageView
@@ -55,9 +55,9 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="4"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:layout_weight="4"
             android:gravity="end"
             android:orientation="horizontal">
 
@@ -66,8 +66,8 @@
                 android:id="@+id/roles_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginStart="@dimen/dp_4"
+                android:orientation="horizontal"
                 android:visibility="visible">
 
                 <ImageView
@@ -86,6 +86,7 @@
                     app:strokeWidth="@dimen/dp_1">
 
                     <com.example.untitleddiscordbot.Utils.AlwaysMarqueeTextView
+                        android:id="@+id/members_roles"
                         style="@style/myFontStyle.Regular.FontPadding"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -95,7 +96,6 @@
                         android:marqueeRepeatLimit="marquee_forever"
                         android:maxEms="4"
                         android:maxLines="1"
-                        android:id="@+id/members_roles"
                         android:padding="@dimen/dp_2"
                         android:singleLine="true"
                         android:textAlignment="center"
@@ -131,6 +131,7 @@
                     app:strokeWidth="@dimen/dp_1">
 
                     <com.example.untitleddiscordbot.Utils.AlwaysMarqueeTextView
+                        android:id="@+id/members_count"
                         style="@style/myFontStyle.Regular.FontPadding"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -140,7 +141,6 @@
                         android:marqueeRepeatLimit="marquee_forever"
                         android:maxEms="4"
                         android:maxLines="1"
-                        android:id="@+id/members_count"
                         android:padding="@dimen/dp_2"
                         android:singleLine="true"
                         android:textAlignment="center"
@@ -156,11 +156,12 @@
                 android:layout_width="@dimen/dp_24"
                 android:layout_height="@dimen/dp_24"
                 android:layout_gravity="end"
+                android:layout_marginStart="@dimen/dp_4"
                 android:src="@drawable/ic_confetti"
                 android:visibility="visible"
-                android:layout_marginStart="@dimen/dp_4"
                 app:tint="@color/white" />
 
         </LinearLayout>
     </LinearLayout>
+
 </com.google.android.material.card.MaterialCardView>
