--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_42">42dp</dimen>
 </resources>
