--- a/app/src/main/res/layout/fragment_channel_settings.xml
+++ b/app/src/main/res/layout/fragment_channel_settings.xml
@@ -1,14 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     tools:context=".fragments.BottomSheet.ChannelSettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <FrameLayout
+        android:id="@+id/bottom_sheet"
+        style="@style/myBottomModalSheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:focusable="false"
+        android:focusableInTouchMode="false">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
+                android:id="@+id/drag_handle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/channel_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:src="@drawable/ic_hash"
+                app:layout_constraintBottom_toBottomOf="@id/channel_name"
+                app:layout_constraintEnd_toStartOf="@id/channel_name"
+                app:layout_constraintStart_toEndOf="@id/vg04"
+                app:layout_constraintTop_toTopOf="@id/channel_name"
+                app:tint="@color/white" />
+
+            <com.example.untitleddiscordbot.Utils.AlwaysMarqueeTextView
+                android:id="@+id/channel_name"
+                style="@style/myFontStyle.Headline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:maxEms="6"
+                android:maxLines="1"
+                android:paddingTop="@dimen/dp_16"
+                android:paddingBottom="@dimen/dp_16"
+                android:singleLine="true"
+                android:textSize="@dimen/text_huge"
+                app:layout_constraintStart_toEndOf="@id/channel_icon"
+                app:layout_constraintTop_toBottomOf="@id/drag_handle"
+                tools:text="MMMMMMMMMMMMMM" />
+
+            <LinearLayout
+                android:id="@+id/welcome_channel_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toStartOf="@id/vg96"
+                app:layout_constraintTop_toTopOf="@id/channel_name">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.materialswitch.MaterialSwitch
+                        android:id="@+id/welcome_channel_toggle"
+                        style="@style/mySwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8" />
+
+                    <ImageView
+                        android:layout_width="@dimen/dp_36"
+                        android:layout_height="fill_parent"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_confetti"
+                        app:tint="@color/white" />
+
+                </LinearLayout>
+
+                <TextView
+                    style="@style/myFontStyle.Regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="none"
+                    android:maxLines="2"
+                    android:padding="@dimen/dp_4"
+                    android:singleLine="false"
+                    android:text="@string/toggle_welcome_channel"
+                    android:textAlignment="viewEnd"
+                    android:textSize="@dimen/text_tiny"
+                    android:textStyle="italic" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/selection_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_16"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                app:layout_constraintEnd_toStartOf="@id/vg96"
+                app:layout_constraintStart_toEndOf="@id/vg04"
+                app:layout_constraintTop_toBottomOf="@id/welcome_channel_layout">
+
+                <LinearLayout
+                    android:id="@+id/roles_layout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/roles_title"
+                        style="@style/myFontStyle.Headline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/roles"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/text_huge" />
+
+                    <View
+                        android:id="@+id/selection_role"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_2"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:background="@color/channel_chip_background"
+                        android:visibility="gone" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/members_layout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/members_title"
+                        style="@style/myFontStyle.Headline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="@string/members"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/text_huge"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:id="@+id/selection_member"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_2"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:background="@color/channel_chip_background"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <include
+                android:id="@+id/roles_container"
+                layout="@layout/info_card_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_16"
+                android:visibility="visible"
+                app:layout_constraintEnd_toStartOf="@id/vg96"
+                app:layout_constraintStart_toEndOf="@id/vg04"
+                app:layout_constraintTop_toBottomOf="@id/selection_layout" />
+
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/vg04"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.04" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/vg96"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.96" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
