--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
     <color name="transparent_dark">#CC000000</color>
     <color name="white_stroke_transparent_25">#40EDF2F4</color>
     <color name="channel_chip_background">#2677D3</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
