Add Bottom Shelf Role Fragment

--- a/app/src/main/res/layout/layout_bottom_modal_members.xml
+++ b/app/src/main/res/layout/layout_bottom_modal_members.xml
@@ -45,7 +45,7 @@
             android:focusableInTouchMode="true">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_selected_roles"
+                android:id="@+id/rv_selected_members"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:nestedScrollingEnabled="false"
@@ -58,7 +58,7 @@
                 android:id="@+id/other_layouts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/rv_selected_roles"
+                android:layout_below="@id/rv_selected_members"
                 android:orientation="vertical">
 
                 <LinearLayout
