--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,6 @@
     <dimen name="dp_2">2dp</dimen>
     <dimen name="dp_1">1dp</dimen>
     <dimen name="dp_42">42dp</dimen>
+    <dimen name="dp_128">128dp</dimen>
+    <dimen name="dp_144">144dp</dimen>
 </resources>
