Implement full modal bottom fragment

--- a/app/src/main/res/layout/fragment_channel_settings.xml
+++ b/app/src/main/res/layout/fragment_channel_settings.xml
@@ -131,6 +131,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="@string/roles"
+                        android:textStyle="bold"
                         android:textAlignment="center"
                         android:textSize="@dimen/text_huge" />
 
@@ -140,7 +141,7 @@
                         android:layout_height="@dimen/dp_2"
                         android:layout_marginTop="@dimen/dp_4"
                         android:background="@color/channel_chip_background"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
 
 
                 </LinearLayout>
@@ -161,7 +162,7 @@
                         android:text="@string/members"
                         android:textAlignment="center"
                         android:textSize="@dimen/text_huge"
-                        android:textStyle="bold" />
+                         />
 
                     <View
                         android:id="@+id/selection_member"
@@ -169,7 +170,7 @@
                         android:layout_height="@dimen/dp_2"
                         android:layout_marginTop="@dimen/dp_4"
                         android:background="@color/channel_chip_background"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
