--- a/app/src/main/res/layout/recycler_view_select_member.xml
+++ b/app/src/main/res/layout/recycler_view_select_member.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_4"
+    android:id="@+id/member_chip"
     android:background="@drawable/chip_background"
     android:backgroundTint="@color/active_color"
     android:orientation="horizontal"
@@ -46,6 +47,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:alpha="0.8"
+            android:id="@+id/member_chip_discriminator"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dp_8"
             android:textAllCaps="false"
