--- a/app/src/main/res/layout/custom_carousel_layout.xml
+++ b/app/src/main/res/layout/custom_carousel_layout.xml
@@ -69,6 +69,7 @@
                 android:layout_marginEnd="@dimen/dp_16"
                 android:layout_marginBottom="@dimen/dp_8"
                 android:alpha="0.8"
+                android:id="@+id/featureDescription"
                 android:ellipsize="end"
                 android:autoSizeTextType="uniform"
                 android:autoSizeMaxTextSize="@dimen/text_large"
